added a table, contacts and socials

--- a/Contacten.html
+++ b/Contacten.html
@@ -18,6 +18,23 @@
         <a class="effect" :hover href="Contacten.html">Contacten</a>
         <a class="effect" :hover href="Projecten.html">Projecten</a>
     </nav>
+    <div class="contacts">
+        <h1>Contacts:</h1>
+        <p>Private-Email: kajvanes8@gmail.com</p>
+        <p>School-Email: 9024897@student.zadkine.nl</p>
+        <p>Phone-number: +31 6 14103021</p>
+    </div>
+    <div class="socials">
+        <a href="https://www.instagram.com/kaje_010/">
+            <img class="image-social" src="images/instagram.png" alt="" width="60px">
+        </a>
+        <a href="https://github.com/KajE879">
+            <img class="image-social" src="images/github.png" alt="" width="60px">
+        </a>
+        <a href="https://www.facebook.com/profile.php?id=100084433671737">
+            <img class="image-social" src="images/facebook.png" alt="" width="60px">
+        </a>
+    </div>
 </body>
 
 </html>
