--- a/Ervaringen.html
+++ b/Ervaringen.html
@@ -18,6 +18,23 @@
         <a class="effect" :hover href="Contacten.html">Contacten</a>
         <a class="effect" :hover href="Projecten.html">Projecten</a>
     </nav>
+    <table>
+        <tr>
+            <th>Tijd</th>
+            <th>Niveau</th>
+            <th>Plaats</th>
+        </tr>
+        <tr>
+            <td>Sep 2020 - Jul 2024</td>
+            <td>Havo 1 t/m 4</td>
+            <td>Comenius college capelle</td>
+        </tr>
+        <tr>
+            <td>Sep 2024 - Nu</td>
+            <td>Mbo 4</td>
+            <td>Techniek college Rotterdam</td>
+        </tr>
+    </table>
 </body>
 
 </html>
