Added foto to my index/homepage

--- a/Contacten.html
+++ b/Contacten.html
@@ -26,13 +26,13 @@
     </div>
     <div class="socials">
         <a href="https://www.instagram.com/kaje_010/">
-            <img class="image-social" src="images/instagram.png" alt="" width="60px">
+            <img class="image-social" src="images/instagram.png" alt="instagram logo" width="60px">
         </a>
         <a href="https://github.com/KajE879">
-            <img class="image-social" src="images/github.png" alt="" width="60px">
+            <img class="image-social" src="images/github.png" alt="github logo" width="60px">
         </a>
         <a href="https://www.facebook.com/profile.php?id=100084433671737">
-            <img class="image-social" src="images/facebook.png" alt="" width="60px">
+            <img class="image-social" src="images/facebook.png" alt="facebook logo" width="60px">
         </a>
     </div>
 </body>
