--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
         <a class="effect button" :hover href="Contacten.html">Contacten</a>
         <a class="effect button" :hover href="Projecten.html">Projecten</a>
     </nav>
-    <article>
+    <article class="column">
         <h1>Over mij:</h1> 
         <p>Ik ben Kaj en ik studeer software developer bij Techniek college in Rotterdam oost. Ik hou me bezig met programmeren en werken in een scrum team.</p>
         <a class="button-CV" href="">Download CV</a>
     </article>
+    <div class="row:after">
+        <img class="foto-me" src="images/Kaj.jpeg" alt="" >      
+    </div>
 </body>
 
 </html>
