--- a/Contacten.html
+++ b/Contacten.html
@@ -18,22 +18,24 @@
         <a class="effect" :hover href="Contacten.html">Contacten</a>
         <a class="effect" :hover href="Projecten.html">Projecten</a>
     </nav>
-    <div class="contacts">
-        <h1>Contacts:</h1>
-        <p>Private-Email: kajvanes8@gmail.com</p>
-        <p>School-Email: 9024897@student.zadkine.nl</p>
-        <p>Phone-number: +31 6 14103021</p>
-    </div>
-    <div class="socials">
-        <a href="https://www.instagram.com/kaje_010/">
-            <img class="image-social" src="images/instagram.png" alt="instagram logo" width="60px">
-        </a>
-        <a href="https://github.com/KajE879">
-            <img class="image-social" src="images/github.png" alt="github logo" width="60px">
-        </a>
-        <a href="https://www.facebook.com/profile.php?id=100084433671737">
-            <img class="image-social" src="images/facebook.png" alt="facebook logo" width="60px">
-        </a>
+    <div class="social-contact">
+        <div class="contacts">
+            <h1>Contacts:</h1>
+            <p>Private-Email: kajvanes8@gmail.com</p>
+            <p>School-Email: 9024897@student.zadkine.nl</p>
+            <p>Phone-number: +31 6 14103021</p>
+        </div>
+        <div class="socials">
+            <a href="https://www.instagram.com/kaje_010/">
+                <img src="images/instagram.png" alt="instagram logo" width="60px">
+            </a>
+            <a href="https://github.com/KajE879">
+                <img src="images/github.png" alt="github logo" width="60px">
+            </a>
+            <a href="https://www.facebook.com/profile.php?id=100084433671737">
+                <img src="images/facebook.png" alt="facebook logo" width="60px">
+            </a>
+        </div>
     </div>
 </body>
 
