--- a/Ervaringen.html
+++ b/Ervaringen.html
@@ -18,23 +18,29 @@
         <a class="effect" :hover href="Contacten.html">Contacten</a>
         <a class="effect" :hover href="Projecten.html">Projecten</a>
     </nav>
-    <table>
-        <tr>
-            <th>Tijd</th>
-            <th>Niveau</th>
-            <th>Plaats</th>
-        </tr>
-        <tr>
-            <td>Sep 2020 - Jul 2024</td>
-            <td>Havo 1 t/m 4</td>
-            <td>Comenius college capelle</td>
-        </tr>
-        <tr>
-            <td>Sep 2024 - Nu</td>
-            <td>Mbo 4</td>
-            <td>Techniek college Rotterdam</td>
-        </tr>
-    </table>
+    <div class="vid-tab">
+        <video controls>
+            <source src="" type="">
+            <source src="" type="">
+        </video>
+        <table>
+            <tr>
+                <th>Tijd</th>
+                <th>Niveau</th>
+                <th>Plaats</th>
+            </tr>
+            <tr>
+                <td>Sep 2020 - Jul 2024</td>
+                <td>Havo 1 t/m 4</td>
+                <td>Comenius college capelle</td>
+            </tr>
+            <tr>
+                <td>Sep 2024 - Nu</td>
+                <td>Mbo 4</td>
+                <td>Techniek college Rotterdam</td>
+            </tr>
+        </table>
+    </div>
 </body>
 
 </html>
