--- a/Projecten.html
+++ b/Projecten.html
@@ -7,17 +7,47 @@
 </head>
 
 <body>
+
     <header>
         <a href="index.html">
         <img src="images/logo.png" alt="" width="75px">
         </a>
     </header>
+
     <nav>
         <a class="effect" :hover href="index.html">Home</a>
         <a class="effect" :hover href="Ervaringen.html">Ervaringen</a>
         <a class="effect" :hover href="Contacten.html">Contacten</a>
         <a class="effect" :hover href="Projecten.html">Projecten</a>
     </nav>
+    <div class="projects">
+        <div class="polaroid">
+            <a href="https://github.com/KajE879/portfolio-website">
+                <img class="img-polaroid" src="images/Portfolio.jpg" alt="">
+            </a>
+            <div class="container">
+                <p>Portfolio website</p>
+            </div>
+        </div>
+
+        <div class="polaroid">
+            <a href="#">
+                <img class="img-polaroid" src="images/Comingsoon.png" alt="">
+            </a>
+            <div class="container">
+                <p>COMING SOON!</p>
+            </div>
+        </div>
+        
+        <div class="polaroid">
+            <a href="#">
+                <img class="img-polaroid" src="images/Comingsoon.png" alt="">
+            </a>
+            <div class="container">
+                <p>COMING SOON!</p>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
