--- a/Contacten.html
+++ b/Contacten.html
@@ -21,9 +21,15 @@
     <div class="social-contact">
         <div class="contacts">
             <h1>Contacts:</h1>
-            <p>Private-Email: kajvanes8@gmail.com</p>
-            <p>School-Email: 9024897@student.zadkine.nl</p>
-            <p>Phone-number: +31 6 14103021</p>
+            <p>Private-Email: 
+                <a class="effect" :hover href="mailto:kajvanes8@gmail.com">kajvanes8@gmail.com</a>
+            </p>
+            <p>School-Email: 
+                <a class="effect" :hover href="mailto:9024897@student.zadkine.nl">9024897@student.zadkine.nl</a>
+            </p>
+            <p>Phone-number: 
+                <a class="effect" :hover href="tel:+3114103021">+31 6 14103021</a>
+            </p>
         </div>
         <div class="socials">
             <a href="https://www.instagram.com/kaje_010/">
