--- a/Projecten.html
+++ b/Projecten.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <title>Projecten</title>
     <link rel="stylesheet" href="main.css">
 </head>
-
 <body>
-
     <header>
         <a href="index.html">
         <img src="images/logo.png" alt="" width="75px">
         </a>
     </header>
-
     <nav>
         <a class="effect" :hover href="index.html">Home</a>
         <a class="effect" :hover href="Ervaringen.html">Ervaringen</a>
@@ -23,28 +19,32 @@
     <div class="projects">
         <div class="polaroid">
             <a href="https://github.com/KajE879/portfolio-website">
-                <img class="img-polaroid" src="images/Portfolio.jpg" alt="">
+                <img class="img-polaroid" src="images/portfolio.png" alt="">
             </a>
             <div class="container">
-                <p>Portfolio website</p>
+                <a class="link-pol" href="https://github.com/KajE879/portfolio-website">
+                    <p>Portfolio website</p>
+                </a>
             </div>
         </div>
-
         <div class="polaroid">
             <a href="#">
                 <img class="img-polaroid" src="images/Comingsoon.png" alt="">
             </a>
             <div class="container">
-                <p>COMING SOON!</p>
+                <a class="link-pol" href="#">
+                    <p>COMING SOON!</p>
+                </a>
             </div>
         </div>
-        
         <div class="polaroid">
             <a href="#">
                 <img class="img-polaroid" src="images/Comingsoon.png" alt="">
             </a>
             <div class="container">
-                <p>COMING SOON!</p>
+                <a class="link-pol" href="#">
+                    <p>COMING SOON!</p>
+                </a>
             </div>
         </div>
     </div>
