--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
         </a>
     </header>
     <nav>
-        <a class="effect button" :hover href="index.html">Home</a>
-        <a class="effect button" :hover href="Ervaringen.html">Ervaringen</a>
-        <a class="effect button" :hover href="Contacten.html">Contacten</a>
-        <a class="effect button" :hover href="Projecten.html">Projecten</a>
+        <a class="effect" :hover href="index.html">Home</a>
+        <a class="effect" :hover href="Ervaringen.html">Ervaringen</a>
+        <a class="effect" :hover href="Contacten.html">Contacten</a>
+        <a class="effect" :hover href="Projecten.html">Projecten</a>
     </nav>
     <div class="about-foto">
         <article>
             <h1>Over mij:</h1> 
             <p>Ik ben Kaj en ik studeer software developer bij Techniek college in Rotterdam oost. Ik hou me bezig met programmeren en werken in een scrum team.</p>
-            <a class="button-CV" href="">Download CV</a>
+            <a class="button-CV" href="images/CV-KajvEs.pdf" download>Download CV</a>
         </article>
         <div>
             <img class="foto-me" src="images/Kaj.jpeg" alt="" >      
