--- a/Ervaringen.html
+++ b/Ervaringen.html
@@ -18,12 +18,12 @@
         <a class="effect" :hover href="Contacten.html">Contacten</a>
         <a class="effect" :hover href="Projecten.html">Projecten</a>
     </nav>
-    <div class="vid-tab">
-        <video controls>
+    <div class="erv-main">
+        <video class="erv-left" controls>
             <source src="" type="">
             <source src="" type="">
         </video>
-        <table>
+        <table class="erv-right">
             <tr>
                 <th>Tijd</th>
                 <th>Niveau</th>
