--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <a class="effect" :hover href="Contacten.html">Contacten</a>
         <a class="effect" :hover href="Projecten.html">Projecten</a>
     </nav>
-    <div class="about-foto">
-        <article>
+    <div class="index-main">
+        <article class="index-left">
             <h1>Over mij:</h1> 
             <p>Ik ben Kaj en ik studeer software developer bij Techniek college in Rotterdam oost. Ik hou me bezig met programmeren en werken in een scrum team.</p>
             <a class="button-CV" href="images/CV-KajvEs.pdf" download>Download CV</a>
         </article>
-        <div>
+        <div class="index-right">
             <img class="foto-me" src="images/Kaj.jpeg" alt="" >      
         </div>
     </div>
