--- a/Projecten.html
+++ b/Projecten.html
@@ -3,26 +3,30 @@
 <head>
     <title>Projecten</title>
     <link rel="stylesheet" href="main.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header>
         <a href="index.html">
-        <img src="images/logo.png" alt="" width="75px">
+        <img src="images/logo.png" alt="website logo" width="75px">
         </a>
     </header>
     <nav>
-        <a class="effect" :hover href="index.html">Home</a>
-        <a class="effect" :hover href="Ervaringen.html">Ervaringen</a>
-        <a class="effect" :hover href="Contacten.html">Contacten</a>
-        <a class="effect" :hover href="Projecten.html">Projecten</a>
+        <ul>
+            <li><a class="effect" href="index.html">Home</a></li>
+            <li><a class="effect" href="Ervaringen.html">Ervaringen</a></li>
+            <li><a class="effect" href="Contacten.html">Contacten</a></li>
+            <li><a class="effect" href="Projecten.html">Projecten</a></li>
+        </ul>
     </nav>
     <div class="projects">
         <div class="polaroid">
-            <a href="https://github.com/KajE879/portfolio-website">
-                <img class="img-polaroid" src="images/portfolio.png" alt="">
+            <a href="https://github.com/KajE879/portfolio-website" target="_blank">
+                <img class="img-polaroid" src="images/portfolio.png" alt="logo for my portofolio website">
             </a>
             <div class="container">
-                <a class="link-pol" href="https://github.com/KajE879/portfolio-website">
+                <a class="link-pol" href="https://github.com/KajE879/portfolio-website" target="_blank">
                     <p>Portfolio website</p>
                 </a>
             </div>
