--- a/index.html
+++ b/index.html
@@ -4,24 +4,28 @@
 <head>
     <title>Home</title>
     <link rel="stylesheet" href="main.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
     <header>
         <a href="index.html">
-        <img src="images/logo.png" alt="" width="75px">
+        <img src="images/logo.png" alt="website logo" width="75px">
         </a>
     </header>
     <nav>
-        <a class="effect" :hover href="index.html">Home</a>
-        <a class="effect" :hover href="Ervaringen.html">Ervaringen</a>
-        <a class="effect" :hover href="Contacten.html">Contacten</a>
-        <a class="effect" :hover href="Projecten.html">Projecten</a>
+        <ul>
+            <li><a class="effect" href="index.html">Home</a></li>
+            <li><a class="effect" href="Ervaringen.html">Ervaringen</a></li>
+            <li><a class="effect" href="Contacten.html">Contacten</a></li>
+            <li><a class="effect" href="Projecten.html">Projecten</a></li>
+        </ul>
     </nav>
     <div class="index-main">
         <article class="index-left">
             <h1>Over mij:</h1> 
-            <p>Ik ben Kaj en ik studeer software developer bij Techniek college in Rotterdam oost. Ik hou me bezig met programmeren en werken in een scrum team.</p>
+            <p>Ik ben Kaj, een student softwareontwikkeling aan het Techniek College in Rotterdam Oost. Ik heb een passie voor programmeren en werk graag in teamverband volgens de Scrum-methodologie. Door mijn opleiding en praktijkervaring ontwikkel ik zowel technische vaardigheden als een goed begrip van agile processen, wat mij helpt om effectief samen te werken en innovatieve oplossingen te ontwikkelen.</p>
             <a class="button-CV" href="images/CV-KajvEs.pdf" download>Download CV</a>
         </article>
         <div class="index-right">
