made the code organized and added a massage system

--- a/Ervaringen.html
+++ b/Ervaringen.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-    
+<html lang="en"> 
 <head>
     <title>Ervaringen</title>
     <link rel="stylesheet" href="main.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-
 <body>
     <header>
         <a href="index.html">
@@ -18,15 +16,15 @@
         <ul>
             <li><a class="effect" href="index.html">Home</a></li>
             <li><a class="effect" href="Ervaringen.html">Ervaringen</a></li>
-            <li><a class="effect" href="Contacten.html">Contacten</a></li>
+            <li><a class="effect" href="Contacten.html">Contact</a></li>
             <li><a class="effect" href="Projecten.html">Projecten</a></li>
         </ul>
     </nav>
     <div class="erv-main">
-        <video class="erv-left" controls>
+        <video controls>
             <source src="video.mp4" type="video/mp4">
         </video>
-        <table class="erv-right">
+        <table>
             <thead>
                 <tr>
                     <th>Tijd</th>
@@ -49,5 +47,4 @@
         </table>
     </div>
 </body>
-
 </html>
