--- a/Projecten.html
+++ b/Projecten.html
@@ -16,7 +16,7 @@
         <ul>
             <li><a class="effect" href="index.html">Home</a></li>
             <li><a class="effect" href="Ervaringen.html">Ervaringen</a></li>
-            <li><a class="effect" href="Contacten.html">Contacten</a></li>
+            <li><a class="effect" href="Contacten.html">Contact</a></li>
             <li><a class="effect" href="Projecten.html">Projecten</a></li>
         </ul>
     </nav>
@@ -53,5 +53,4 @@
         </div>
     </div>
 </body>
-
 </html>
