--- a/Contacten.html
+++ b/Contacten.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <title>Contacten</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="send_message.php">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-
 <body>
     <header>
         <a href="index.html">
@@ -18,13 +17,13 @@
         <ul>
             <li><a class="effect" href="index.html">Home</a></li>
             <li><a class="effect" href="Ervaringen.html">Ervaringen</a></li>
-            <li><a class="effect" href="Contacten.html">Contacten</a></li>
+            <li><a class="effect" href="Contacten.html">Contact</a></li>
             <li><a class="effect" href="Projecten.html">Projecten</a></li>
         </ul>
     </nav>
     <main class="social-contact">
         <div class="contacts">
-            <h1>Contacts:</h1>
+            <h1 class="text-roman">Contact:</h1>
             <p>Private-Email: 
                 <a class="effect" href="mailto:kajvanes8@gmail.com">kajvanes8@gmail.com</a>
             </p>
@@ -34,6 +33,18 @@
             <p>Phone-number: 
                 <a class="effect" href="tel:+3114103021">+31 6 14103021</a>
             </p>
+            <div class="contact-form">
+                <h2 class="text-roman">Send me a massage</h2>
+                <form action="save_message.php" method="POST">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name" required>
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" required>
+                    <label for="message">Message</label>
+                    <textarea id="message" name="message" rows="5" required></textarea>
+                    <button type="submit">Send Message</button>
+                </form>
+            </div>
         </div>
         <div class="socials">
             <a href="https://www.instagram.com/kaje_010/" aria-label="Instagram profile for kaje_010">
@@ -48,5 +59,4 @@
         </div>
     </main>
 </body>
-
 </html>
