--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <title>Home</title>
     <link rel="stylesheet" href="main.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-
 <body>
     <header>
         <a href="index.html">
@@ -18,20 +16,25 @@
         <ul>
             <li><a class="effect" href="index.html">Home</a></li>
             <li><a class="effect" href="Ervaringen.html">Ervaringen</a></li>
-            <li><a class="effect" href="Contacten.html">Contacten</a></li>
+            <li><a class="effect" href="Contacten.html">Contact</a></li>
             <li><a class="effect" href="Projecten.html">Projecten</a></li>
         </ul>
     </nav>
     <div class="index-main">
-        <article class="index-left">
-            <h1>Over mij:</h1> 
-            <p>Ik ben Kaj, een student softwareontwikkeling aan het Techniek College in Rotterdam Oost. Ik heb een passie voor programmeren en werk graag in teamverband volgens de Scrum-methodologie. Door mijn opleiding en praktijkervaring ontwikkel ik zowel technische vaardigheden als een goed begrip van agile processen, wat mij helpt om effectief samen te werken en innovatieve oplossingen te ontwikkelen.</p>
-            <a class="button-CV" href="images/CV-KajvEs.pdf" download>Download CV</a>
+        <article class="about-me">
+            <h1 class="text-about">Hallo, Ik ben Kaj - Software Developer</h1> 
+            <p>Ik ben Kaj, een student softwareontwikkeling aan het Techniek College in Rotterdam Oost. Ik heb een passie voor programmeren
+                 en werk graag in teamverband volgens de Scrum-methodologie. Door mijn opleiding en praktijkervaring ontwikkel ik zowel 
+                 technische vaardigheden als een goed begrip van agile processen, wat mij helpt om effectief samen te werken en innovatieve 
+                 oplossingen te ontwikkelen.</p>
+            <div class="contact-cv">
+                <a class="button-CV" href="Contacten.html">Neem contact op</a>
+                <a class="button-CV" href="images/CV-KajvEs.pdf" download>Download CV</a>
+            </div>
         </article>
-        <div class="index-right">
+        <div>
             <img class="foto-me" src="images/Kaj.jpeg" alt="" >      
         </div>
     </div>
 </body>
-
 </html>
