--- a/Projecten.html
+++ b/Projecten.html
@@ -27,7 +27,7 @@
             </a>
             <div class="container">
                 <a class="link-pol" href="https://github.com/KajE879/portfolio-website" target="_blank">
-                    <p>Portfolio website</p>
+                    <h2>Portfolio website</h2>
                 </a>
             </div>
         </div>
@@ -37,7 +37,7 @@
             </a>
             <div class="container">
                 <a class="link-pol" href="#">
-                    <p>COMING SOON!</p>
+                    <h2>COMING SOON!</h2>
                 </a>
             </div>
         </div>
@@ -47,7 +47,7 @@
             </a>
             <div class="container">
                 <a class="link-pol" href="#">
-                    <p>COMING SOON!</p>
+                    <h2>COMING SOON!</h2>
                 </a>
             </div>
         </div>
