--- a/Contacten.html
+++ b/Contacten.html
@@ -35,7 +35,7 @@
             </p>
             <div class="contact-form">
                 <h2 class="text-roman">Send me a massage</h2>
-                <form action="submit.php" method="POST">
+                <form action="#" method="POST">
                     <label for="name">Name:</label>
                     <input type="text" id="name" name="name" required><br>
             
