--- a/Contact.html
+++ b/Contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Contacten</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="send_message.php">
     <meta charset="UTF-8">
@@ -10,14 +10,14 @@
 <body>
     <header>
         <a href="index.html">
-        <img src="images/logo.png" alt="website logo" width="75px">
+        <img src="images/logo.png" alt="website logo">
         </a>
     </header>
     <nav>
         <ul>
             <li><a class="effect" href="index.html">Home</a></li>
             <li><a class="effect" href="Ervaringen.html">Ervaringen</a></li>
-            <li><a class="effect" href="Contacten.html">Contact</a></li>
+            <li><a class="effect" href="Contact.html">Contact</a></li>
             <li><a class="effect" href="Projecten.html">Projecten</a></li>
         </ul>
     </nav>
@@ -48,13 +48,13 @@
         </div>
         <div class="socials">
             <a href="https://www.instagram.com/kaje_010/" aria-label="Instagram profile for kaje_010">
-                <img src="images/instagram.png" alt="Instagram logo" width="60px">
+                <img src="images/instagram.png" alt="Instagram logo">
             </a>
             <a href="https://github.com/KajE879" aria-label="Github profile for KajE879">
-                <img src="images/github.png" alt="Github logo" width="60px">
+                <img src="images/github.png" alt="Github logo">
             </a>
             <a href="https://www.facebook.com/profile.php?id=100084433671737" aria-label="Facebook profile for Kaj van Es">
-                <img src="images/facebook.png" alt="Facebook logo" width="60px">
+                <img src="images/facebook.png" alt="Facebook logo">
             </a>
         </div>
     </main>
