--- a/Projecten.html
+++ b/Projecten.html
@@ -9,14 +9,14 @@
 <body>
     <header>
         <a href="index.html">
-        <img src="images/logo.png" alt="website logo" width="75px">
+        <img src="images/logo.png" alt="website logo">
         </a>
     </header>
     <nav>
         <ul>
             <li><a class="effect" href="index.html">Home</a></li>
             <li><a class="effect" href="Ervaringen.html">Ervaringen</a></li>
-            <li><a class="effect" href="Contacten.html">Contact</a></li>
+            <li><a class="effect" href="Contact.html">Contact</a></li>
             <li><a class="effect" href="Projecten.html">Projecten</a></li>
         </ul>
     </nav>
