--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
     <header>
         <a href="index.html">
-        <img src="images/logo.png" alt="website logo" width="75px">
+        <img src="images/logo.png" alt="website logo">
         </a>
     </header>
     <nav>
         <ul>
             <li><a class="effect" href="index.html">Home</a></li>
             <li><a class="effect" href="Ervaringen.html">Ervaringen</a></li>
-            <li><a class="effect" href="Contacten.html">Contact</a></li>
+            <li><a class="effect" href="Contact.html">Contact</a></li>
             <li><a class="effect" href="Projecten.html">Projecten</a></li>
         </ul>
     </nav>
@@ -27,13 +27,13 @@
                  en werk graag in teamverband volgens de Scrum-methodologie. Door mijn opleiding en praktijkervaring ontwikkel ik zowel 
                  technische vaardigheden als een goed begrip van agile processen, wat mij helpt om effectief samen te werken en innovatieve 
                  oplossingen te ontwikkelen.</p>
-            <div class="contact-cv">
-                <a class="button-CV" href="Contacten.html">Neem contact op</a>
-                <a class="button-CV" href="images/CV-KajvEs.pdf" download>Download CV</a>
+            <div class="buttons">
+                <a class="beffect" href="Contact.html">Neem contact op</a>
+                <a class="beffect" href="images/CV-KajvEs.pdf" download>Download CV</a>
             </div>
         </article>
         <div>
-            <img class="foto-me" src="images/Kaj.jpeg" alt="" >      
+            <img class="foto-me" src="images/Kaj.jpeg" alt="A foto of me" >      
         </div>
     </div>
 </body>
