--- a/Ervaringen.html
+++ b/Ervaringen.html
@@ -9,21 +9,26 @@
 <body>
     <header>
         <a href="index.html">
-            <img src="images/logo.png" alt="website logo" width="75px">
+            <img src="images/logo.png" alt="website logo">
         </a>
     </header>
     <nav>
         <ul>
             <li><a class="effect" href="index.html">Home</a></li>
             <li><a class="effect" href="Ervaringen.html">Ervaringen</a></li>
-            <li><a class="effect" href="Contacten.html">Contact</a></li>
+            <li><a class="effect" href="Contact.html">Contact</a></li>
             <li><a class="effect" href="Projecten.html">Projecten</a></li>
         </ul>
     </nav>
     <div class="erv-main">
-        <video controls>
-            <source src="video.mp4" type="video/mp4">
-        </video>
+        <div>
+            <a href="video.mp4">
+                <h2 class="effect">Interview:</h2>
+            </a>
+            <video controls>
+                <source src="video.mp4" type="video/mp4">
+            </video>
+        </div>  
         <table>
             <thead>
                 <tr>
