--- a/Ervaringen.html
+++ b/Ervaringen.html
@@ -22,11 +22,11 @@
     </nav>
     <div class="erv-main">
         <div>
-            <a href="video.mp4">
+            <a href="images/Video.mp4">
                 <h2 class="effect">Interview:</h2>
             </a>
             <video controls>
-                <source src="video.mp4" type="video/mp4">
+                <source src="images/Video.mp4" type="video/mp4">
             </video>
         </div>  
         <table>
